// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`mark-done tool bulk thread operations marks all read in a channel without archiving when archive=false 1`] = `
"# Mark Threads Done

**Mode:** Bulk Operation
**Channel ID:** channel-id-1
**Mark Read:** Yes
**Archive:** No

Bulk operation completed successfully
## Next Steps

Use \`fetch-inbox\` to see remaining unread threads."
`;

exports[`mark-done tool bulk thread operations should archive all without marking as read in workspace 1`] = `
"# Mark Threads Done

**Mode:** Bulk Operation
**Workspace ID:** 11111
**Mark Read:** No
**Archive:** Yes

Bulk operation completed successfully
## Next Steps

Use \`fetch-inbox\` to see remaining unread threads."
`;

exports[`mark-done tool bulk thread operations should clear all unread markers in a workspace 1`] = `
"# Mark Threads Done

**Mode:** Bulk Operation
**Workspace ID:** 11111
**Operation:** Clear all unread markers

Bulk operation completed successfully
## Next Steps

Use \`fetch-inbox\` to see remaining unread threads."
`;

exports[`mark-done tool bulk thread operations should mark all as read without archiving in workspace 1`] = `
"# Mark Threads Done

**Mode:** Bulk Operation
**Workspace ID:** 11111
**Mark Read:** Yes
**Archive:** No

Bulk operation completed successfully
## Next Steps

Use \`fetch-inbox\` to see remaining unread threads."
`;

exports[`mark-done tool bulk thread operations should mark all threads as read and archive in a workspace 1`] = `
"# Mark Threads Done

**Mode:** Bulk Operation
**Workspace ID:** 11111
**Mark Read:** Yes
**Archive:** Yes

Bulk operation completed successfully
## Next Steps

Use \`fetch-inbox\` to see remaining unread threads."
`;

exports[`mark-done tool marking conversations as done should handle conversation not found error 1`] = `
"# Mark Conversations Done

**Mode:** Individual IDs
**Total Requested:** 1
**Successful:** 0
**Failed:** 1
**Mark Read:** Yes
**Archive:** No

## Failed

- conversation conv-id-1: markRead: Conversation not found

## Next Steps

Review failed items and retry if needed."
`;

exports[`mark-done tool marking conversations as done should mark all conversations as done successfully 1`] = `
"# Mark Conversations Done

**Mode:** Individual IDs
**Total Requested:** 2
**Successful:** 2
**Failed:** 0
**Mark Read:** Yes
**Archive:** Yes

## Completed

conv-id-1, conv-id-2

## Next Steps

Check your conversations for remaining unread messages."
`;

exports[`mark-done tool marking threads as done should archive thread only 1`] = `
"# Mark Threads Done

**Mode:** Individual IDs
**Total Requested:** 1
**Successful:** 1
**Failed:** 0
**Mark Read:** No
**Archive:** Yes

## Completed

thread-id-1

## Next Steps

Use \`fetch-inbox\` to see remaining unread threads."
`;

exports[`mark-done tool marking threads as done should handle all threads failing 1`] = `
"# Mark Threads Done

**Mode:** Individual IDs
**Total Requested:** 2
**Successful:** 0
**Failed:** 2
**Mark Read:** Yes
**Archive:** Yes

## Failed

- thread thread-id-1: markRead: API Error: Network timeout; archive: API Error: Network timeout
- thread thread-id-2: markRead: API Error: Network timeout; archive: API Error: Network timeout

## Next Steps

Review failed items and retry if needed."
`;

exports[`mark-done tool marking threads as done should handle partial failures gracefully 1`] = `
"# Mark Threads Done

**Mode:** Individual IDs
**Total Requested:** 3
**Successful:** 2
**Failed:** 1
**Mark Read:** Yes
**Archive:** Yes

## Completed

thread-id-1, thread-id-3

## Failed

- thread thread-id-2: archive: Thread not found

## Next Steps

Review failed items and retry if needed."
`;

exports[`mark-done tool marking threads as done should mark all threads as done successfully 1`] = `
"# Mark Threads Done

**Mode:** Individual IDs
**Total Requested:** 3
**Successful:** 3
**Failed:** 0
**Mark Read:** Yes
**Archive:** Yes

## Completed

thread-id-1, thread-id-2, thread-id-3

## Next Steps

Use \`fetch-inbox\` to see remaining unread threads."
`;

exports[`mark-done tool marking threads as done should mark thread as read only 1`] = `
"# Mark Threads Done

**Mode:** Individual IDs
**Total Requested:** 1
**Successful:** 1
**Failed:** 0
**Mark Read:** Yes
**Archive:** No

## Completed

thread-id-1

## Next Steps

Use \`fetch-inbox\` to see remaining unread threads."
`;

exports[`mark-done tool next steps logic validation should suggest fetch-inbox when all threads complete successfully 1`] = `
"# Mark Threads Done

**Mode:** Individual IDs
**Total Requested:** 2
**Successful:** 2
**Failed:** 0
**Mark Read:** Yes
**Archive:** Yes

## Completed

thread-id-1, thread-id-2

## Next Steps

Use \`fetch-inbox\` to see remaining unread threads."
`;

exports[`mark-done tool next steps logic validation should suggest reviewing failures when mixed results 1`] = `
"# Mark Threads Done

**Mode:** Individual IDs
**Total Requested:** 2
**Successful:** 1
**Failed:** 1
**Mark Read:** Yes
**Archive:** Yes

## Completed

thread-id-1

## Failed

- thread thread-id-2: archive: Thread not found

## Next Steps

Review failed items and retry if needed."
`;
